--- a/Client/package.json
+++ b/Client/package.json
@@ -14,9 +14,11 @@
     "@mapbox/node-pre-gyp": "^1.0.10",
     "@react-google-maps/api": "^2.20.6",
     "axios": "^1.7.9",
+    "leaflet": "^1.9.4",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.1.5",
     "react-toastify": "^11.0.3"
   },
